--- a/VehicleRentalManager/appsettings.json
+++ b/VehicleRentalManager/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=app.db"
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyHere",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "YourGoogleClientId",
+      "ClientSecret": "YourGoogleClientSecret"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
